--- a/app.json
+++ b/app.json
@@ -1068,7 +1068,7 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": 3036,
+            "viewCount": 3037,
             "likeCount": 84,
             "favoriteCount": 0,
             "commentCount": 3,
@@ -1362,7 +1362,7 @@
         ],
         "last_modified": "2023-05-31T00:01:07Z",
         "stargazers": 261,
-        "forks": 197,
+        "forks": 196,
         "description": "An introduction to NoSQL Databases",
         "reposlug": "datastaxdevs-workshop-introduction-to-nosql",
         "name": "Introduction to NoSQL Workshop",
@@ -1639,17 +1639,11 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": "2284",
-            "likeCount": "71",
-            "favoriteCount": "0",
-            "commentCount": "0",
-            "liveStreamingDetails": [
-                {
-                    "actualStartTime": "2022-02-02T15:54:55Z",
-                    "actualEndTime": "2022-02-02T18:18:04Z",
-                    "scheduledStartTime": "2022-02-02T16:00:00Z"
-                }
-            ]
+            "viewCount": 0,
+            "likeCount": 0,
+            "dislikeCount": 0,
+            "favoriteCount": 0,
+            "commentCount": 0
         },
         "last_modified": "2023-05-05T01:56:45Z",
         "stargazers": 28,
