--- a/app.json
+++ b/app.json
@@ -903,11 +903,17 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": 0,
-            "likeCount": 0,
-            "dislikeCount": 0,
-            "favoriteCount": 0,
-            "commentCount": 0
+            "viewCount": "1676",
+            "likeCount": "88",
+            "favoriteCount": "0",
+            "commentCount": "1",
+            "liveStreamingDetails": [
+                {
+                    "actualStartTime": "2022-08-31T14:57:25Z",
+                    "actualEndTime": "2022-08-31T17:22:42Z",
+                    "scheduledStartTime": "2022-08-31T15:00:00Z"
+                }
+            ]
         },
         "last_modified": "2023-02-09T16:59:36Z",
         "stargazers": 6,
@@ -1062,7 +1068,7 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": 3036,
+            "viewCount": 3040,
             "likeCount": 84,
             "favoriteCount": 0,
             "commentCount": 3,
@@ -1573,7 +1579,7 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": "4838",
+            "viewCount": "4839",
             "likeCount": "273",
             "favoriteCount": "0",
             "commentCount": "3",
