--- a/app.json
+++ b/app.json
@@ -515,8 +515,8 @@
         "tags": [
             "java"
         ],
-        "last_modified": "2023-02-16T19:32:14Z",
-        "stargazers": 23,
+        "last_modified": "2023-06-19T11:56:37Z",
+        "stargazers": 24,
         "forks": 9,
         "reposlug": "DataStax-Examples-java-cassandra-driver-from3x-to4x"
     },
@@ -758,17 +758,11 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": "820",
-            "likeCount": "29",
-            "favoriteCount": "0",
-            "commentCount": "0",
-            "liveStreamingDetails": [
-                {
-                    "actualStartTime": "2022-08-10T14:54:50Z",
-                    "actualEndTime": "2022-08-10T17:11:57Z",
-                    "scheduledStartTime": "2022-08-10T15:00:00Z"
-                }
-            ]
+            "viewCount": 0,
+            "likeCount": 0,
+            "dislikeCount": 0,
+            "favoriteCount": 0,
+            "commentCount": 0
         },
         "last_modified": "2023-01-25T17:48:55Z",
         "stargazers": 10,
@@ -1068,11 +1062,16 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": "1080",
-            "likeCount": "39",
-            "favoriteCount": "0",
-            "commentCount": "1",
+            "viewCount": 3056,
+            "likeCount": 84,
+            "favoriteCount": 0,
+            "commentCount": 3,
             "liveStreamingDetails": [
+                {
+                    "actualStartTime": "2022-02-15T16:04:54Z",
+                    "actualEndTime": "2022-02-15T18:20:08Z",
+                    "scheduledStartTime": "2022-02-15T16:00:00Z"
+                },
                 {
                     "actualStartTime": "2021-05-11T15:59:53Z",
                     "actualEndTime": "2021-05-11T18:08:15Z",
@@ -1314,17 +1313,11 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": "1094",
-            "likeCount": "44",
-            "favoriteCount": "0",
-            "commentCount": "0",
-            "liveStreamingDetails": [
-                {
-                    "actualStartTime": "2022-06-29T14:55:25Z",
-                    "actualEndTime": "2022-06-29T17:02:24Z",
-                    "scheduledStartTime": "2022-06-29T15:00:00Z"
-                }
-            ]
+            "viewCount": 0,
+            "likeCount": 0,
+            "dislikeCount": 0,
+            "favoriteCount": 0,
+            "commentCount": 0
         },
         "last_modified": "2023-04-10T05:15:46Z",
         "stargazers": 78,
@@ -1686,8 +1679,8 @@
                 "https://www.mentimeter.com/app/folder/1973089"
             ]
         },
-        "last_modified": "2023-06-03T15:29:26Z",
-        "stargazers": 22,
+        "last_modified": "2023-06-19T09:07:58Z",
+        "stargazers": 21,
         "forks": 25,
         "description": "Clone of Good Reads using Spring and Cassandra",
         "reposlug": "datastaxdevs-workshop-betterreads"
