--- a/app.json
+++ b/app.json
@@ -1068,11 +1068,16 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": "1080",
-            "likeCount": "39",
-            "favoriteCount": "0",
-            "commentCount": "1",
+            "viewCount": 3060,
+            "likeCount": 84,
+            "favoriteCount": 0,
+            "commentCount": 3,
             "liveStreamingDetails": [
+                {
+                    "actualStartTime": "2022-02-15T16:04:54Z",
+                    "actualEndTime": "2022-02-15T18:20:08Z",
+                    "scheduledStartTime": "2022-02-15T16:00:00Z"
+                },
                 {
                     "actualStartTime": "2021-05-11T15:59:53Z",
                     "actualEndTime": "2021-05-11T18:08:15Z",
@@ -1314,7 +1319,7 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": "1094",
+            "viewCount": "1095",
             "likeCount": "44",
             "favoriteCount": "0",
             "commentCount": "0",
@@ -1574,7 +1579,7 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": "4847",
+            "viewCount": "4854",
             "likeCount": "273",
             "favoriteCount": "0",
             "commentCount": "3",
@@ -1634,11 +1639,17 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": 0,
-            "likeCount": 0,
-            "dislikeCount": 0,
-            "favoriteCount": 0,
-            "commentCount": 0
+            "viewCount": "2288",
+            "likeCount": "71",
+            "favoriteCount": "0",
+            "commentCount": "0",
+            "liveStreamingDetails": [
+                {
+                    "actualStartTime": "2022-02-02T15:54:55Z",
+                    "actualEndTime": "2022-02-02T18:18:04Z",
+                    "scheduledStartTime": "2022-02-02T16:00:00Z"
+                }
+            ]
         },
         "last_modified": "2023-06-17T20:58:11Z",
         "stargazers": 30,
