--- a/app.json
+++ b/app.json
@@ -671,17 +671,11 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": "1431",
-            "likeCount": "50",
-            "favoriteCount": "0",
-            "commentCount": "3",
-            "liveStreamingDetails": [
-                {
-                    "actualStartTime": "2022-07-20T14:57:48Z",
-                    "actualEndTime": "2022-07-20T17:35:22Z",
-                    "scheduledStartTime": "2022-07-20T15:00:00Z"
-                }
-            ]
+            "viewCount": 0,
+            "likeCount": 0,
+            "dislikeCount": 0,
+            "favoriteCount": 0,
+            "commentCount": 0
         },
         "last_modified": "2023-02-07T19:26:49Z",
         "stargazers": 17,
@@ -1068,7 +1062,7 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": 3060,
+            "viewCount": 3061,
             "likeCount": 84,
             "favoriteCount": 0,
             "commentCount": 3,
@@ -1639,7 +1633,7 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": "2288",
+            "viewCount": "2289",
             "likeCount": "71",
             "favoriteCount": "0",
             "commentCount": "0",
