--- a/app.json
+++ b/app.json
@@ -671,17 +671,11 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": "1432",
-            "likeCount": "50",
-            "favoriteCount": "0",
-            "commentCount": "3",
-            "liveStreamingDetails": [
-                {
-                    "actualStartTime": "2022-07-20T14:57:48Z",
-                    "actualEndTime": "2022-07-20T17:35:22Z",
-                    "scheduledStartTime": "2022-07-20T15:00:00Z"
-                }
-            ]
+            "viewCount": 0,
+            "likeCount": 0,
+            "dislikeCount": 0,
+            "favoriteCount": 0,
+            "commentCount": 0
         },
         "last_modified": "2023-02-07T19:26:49Z",
         "stargazers": 17,
@@ -758,11 +752,17 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": 0,
-            "likeCount": 0,
-            "dislikeCount": 0,
-            "favoriteCount": 0,
-            "commentCount": 0
+            "viewCount": "820",
+            "likeCount": "29",
+            "favoriteCount": "0",
+            "commentCount": "0",
+            "liveStreamingDetails": [
+                {
+                    "actualStartTime": "2022-08-10T14:54:50Z",
+                    "actualEndTime": "2022-08-10T17:11:57Z",
+                    "scheduledStartTime": "2022-08-10T15:00:00Z"
+                }
+            ]
         },
         "last_modified": "2023-01-25T17:48:55Z",
         "stargazers": 10,
@@ -897,7 +897,7 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": "1684",
+            "viewCount": "1685",
             "likeCount": "88",
             "favoriteCount": "0",
             "commentCount": "1",
@@ -1062,11 +1062,16 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": "1082",
-            "likeCount": "39",
-            "favoriteCount": "0",
-            "commentCount": "1",
+            "viewCount": 3063,
+            "likeCount": 84,
+            "favoriteCount": 0,
+            "commentCount": 3,
             "liveStreamingDetails": [
+                {
+                    "actualStartTime": "2022-02-15T16:04:54Z",
+                    "actualEndTime": "2022-02-15T18:20:08Z",
+                    "scheduledStartTime": "2022-02-15T16:00:00Z"
+                },
                 {
                     "actualStartTime": "2021-05-11T15:59:53Z",
                     "actualEndTime": "2021-05-11T18:08:15Z",
@@ -1308,11 +1313,17 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": 0,
-            "likeCount": 0,
-            "dislikeCount": 0,
-            "favoriteCount": 0,
-            "commentCount": 0
+            "viewCount": "1095",
+            "likeCount": "44",
+            "favoriteCount": "0",
+            "commentCount": "0",
+            "liveStreamingDetails": [
+                {
+                    "actualStartTime": "2022-06-29T14:55:25Z",
+                    "actualEndTime": "2022-06-29T17:02:24Z",
+                    "scheduledStartTime": "2022-06-29T15:00:00Z"
+                }
+            ]
         },
         "last_modified": "2023-04-10T05:15:46Z",
         "stargazers": 78,
@@ -1562,11 +1573,17 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": 0,
-            "likeCount": 0,
-            "dislikeCount": 0,
-            "favoriteCount": 0,
-            "commentCount": 0
+            "viewCount": "4854",
+            "likeCount": "273",
+            "favoriteCount": "0",
+            "commentCount": "3",
+            "liveStreamingDetails": [
+                {
+                    "actualStartTime": "2022-02-23T15:57:19Z",
+                    "actualEndTime": "2022-02-23T18:36:39Z",
+                    "scheduledStartTime": "2022-02-23T16:00:00Z"
+                }
+            ]
         },
         "last_modified": "2023-05-15T04:58:58Z",
         "stargazers": 133,
@@ -1616,17 +1633,11 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": "2291",
-            "likeCount": "71",
-            "favoriteCount": "0",
-            "commentCount": "0",
-            "liveStreamingDetails": [
-                {
-                    "actualStartTime": "2022-02-02T15:54:55Z",
-                    "actualEndTime": "2022-02-02T18:18:04Z",
-                    "scheduledStartTime": "2022-02-02T16:00:00Z"
-                }
-            ]
+            "viewCount": 0,
+            "likeCount": 0,
+            "dislikeCount": 0,
+            "favoriteCount": 0,
+            "commentCount": 0
         },
         "last_modified": "2023-06-17T20:58:11Z",
         "stargazers": 30,
