--- a/app.json
+++ b/app.json
@@ -897,7 +897,7 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": "1685",
+            "viewCount": "1686",
             "likeCount": "88",
             "favoriteCount": "0",
             "commentCount": "1",
@@ -1633,11 +1633,17 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": 0,
-            "likeCount": 0,
-            "dislikeCount": 0,
-            "favoriteCount": 0,
-            "commentCount": 0
+            "viewCount": "2291",
+            "likeCount": "71",
+            "favoriteCount": "0",
+            "commentCount": "0",
+            "liveStreamingDetails": [
+                {
+                    "actualStartTime": "2022-02-02T15:54:55Z",
+                    "actualEndTime": "2022-02-02T18:18:04Z",
+                    "scheduledStartTime": "2022-02-02T16:00:00Z"
+                }
+            ]
         },
         "last_modified": "2023-06-17T20:58:11Z",
         "stargazers": 30,
