--- a/app.json
+++ b/app.json
@@ -1068,20 +1068,15 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": 3207,
-            "likeCount": 87,
-            "favoriteCount": 0,
-            "commentCount": 3,
+            "viewCount": "2108",
+            "likeCount": "48",
+            "favoriteCount": "0",
+            "commentCount": "2",
             "liveStreamingDetails": [
                 {
                     "actualStartTime": "2022-02-15T16:04:54Z",
                     "actualEndTime": "2022-02-15T18:20:08Z",
                     "scheduledStartTime": "2022-02-15T16:00:00Z"
-                },
-                {
-                    "actualStartTime": "2021-05-11T15:59:53Z",
-                    "actualEndTime": "2021-05-11T18:08:15Z",
-                    "scheduledStartTime": "2021-05-11T16:00:00Z"
                 }
             ]
         },
@@ -1284,7 +1279,7 @@
         },
         "last_modified": "2021-11-15T09:50:11Z",
         "stargazers": 20,
-        "forks": 28,
+        "forks": 29,
         "reposlug": "datastaxdevs-workshop-vuejs"
     },
     "datastaxdevs-workshop-intro-to-graphql": {
@@ -1579,7 +1574,7 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": "4874",
+            "viewCount": "4875",
             "likeCount": "274",
             "favoriteCount": "0",
             "commentCount": "3",
