--- a/app.json
+++ b/app.json
@@ -402,8 +402,8 @@
             "java",
             "grpc api"
         ],
-        "last_modified": "2023-08-13T11:21:15Z",
-        "stargazers": 64,
+        "last_modified": "2023-09-06T20:59:45Z",
+        "stargazers": 65,
         "forks": 40,
         "reposlug": "KillrVideo-killrvideo-java"
     },
@@ -1068,16 +1068,11 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": 3209,
-            "likeCount": 87,
-            "favoriteCount": 0,
-            "commentCount": 3,
+            "viewCount": "1099",
+            "likeCount": "39",
+            "favoriteCount": "0",
+            "commentCount": "1",
             "liveStreamingDetails": [
-                {
-                    "actualStartTime": "2022-02-15T16:04:54Z",
-                    "actualEndTime": "2022-02-15T18:20:08Z",
-                    "scheduledStartTime": "2022-02-15T16:00:00Z"
-                },
                 {
                     "actualStartTime": "2021-05-11T15:59:53Z",
                     "actualEndTime": "2021-05-11T18:08:15Z",
@@ -1639,7 +1634,7 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": "2373",
+            "viewCount": "2374",
             "likeCount": "72",
             "favoriteCount": "0",
             "commentCount": "0",
