--- a/app.json
+++ b/app.json
@@ -601,7 +601,7 @@
         "owner": "Madhavan Sridharan",
         "apis": [],
         "tags": [],
-        "last_modified": "2022-02-01T18:40:19Z",
+        "last_modified": "2023-09-08T03:32:16Z",
         "stargazers": 7,
         "forks": 3,
         "reposlug": "msmygit-dse-titbits"
@@ -897,11 +897,17 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": 0,
-            "likeCount": 0,
-            "dislikeCount": 0,
-            "favoriteCount": 0,
-            "commentCount": 0
+            "viewCount": "1739",
+            "likeCount": "90",
+            "favoriteCount": "0",
+            "commentCount": "1",
+            "liveStreamingDetails": [
+                {
+                    "actualStartTime": "2022-08-31T14:57:25Z",
+                    "actualEndTime": "2022-08-31T17:22:42Z",
+                    "scheduledStartTime": "2022-08-31T15:00:00Z"
+                }
+            ]
         },
         "last_modified": "2023-02-09T16:59:36Z",
         "stargazers": 6,
@@ -1056,20 +1062,15 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": 3214,
-            "likeCount": 87,
-            "favoriteCount": 0,
-            "commentCount": 3,
+            "viewCount": "2116",
+            "likeCount": "48",
+            "favoriteCount": "0",
+            "commentCount": "2",
             "liveStreamingDetails": [
                 {
                     "actualStartTime": "2022-02-15T16:04:54Z",
                     "actualEndTime": "2022-02-15T18:20:08Z",
                     "scheduledStartTime": "2022-02-15T16:00:00Z"
-                },
-                {
-                    "actualStartTime": "2021-05-11T15:59:53Z",
-                    "actualEndTime": "2021-05-11T18:08:15Z",
-                    "scheduledStartTime": "2021-05-11T16:00:00Z"
                 }
             ]
         },
@@ -1567,7 +1568,7 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": "4875",
+            "viewCount": "4876",
             "likeCount": "274",
             "favoriteCount": "0",
             "commentCount": "3",
